<resources>
    <string name="app_name">Queue Management</string>

    <string name="devices">USB Devices</string>
    <string name="sample_text">Khu điều trị theo yêu cầu</string>
    <string name="max_line">Số dòng&#58;</string>
    <string name="max_column">Số cột&#58;</string>
    <string name="place">Khu - Địa điểm</string>
    <string name="room">Quầy</string>
    <string name="room_2">Phòng</string>

    <string name="config">Cấu hình</string>
    <string name="config_display">Cấu hình hiển thị</string>
    <string name="config_usb_serial">Cấu hình giao tiếp USB</string>
    <string name="saved_config">Đã lưu cấu hình thành công.</string>
    <string name="miss_data_android_box">Vui lòng nhập ID của thiết bị.</string>
    <string name="miss_data_area">Vui lòng nhập dữ liệu cho Khu - Địa điểm</string>
    <string name="miss_data">Vui lòng nhập vào đầy đủ thông tin.</string>

    <string name="status_pause">Tạm ngưng</string>
    <string name="status_welcome">Kính chào</string>
    <string name="status_thankyou">&#160;&#160;Cảm ơn&#160;&#160;</string>

    <string name="calling_number">Số đang gọi</string>
    <string name="calling_room">Quầy</string>
    <string name="baud_rate">Baud Rate</string>
    <string name="usb_device">Thiết bị USB</string>

    <string name="display_mode">Chế độ hiển thị</string>
    <string name="main_display">Main Display</string>
    <string name="counter_display">Counter Display</string>

    <string name="table_view_mode">Danh sách hiển thị</string>
    <string name="android_box_id">ID của thiết bị</string>
    <string name="save_config">Lưu thông tin cấu hình</string>
    <string name="selected_devices">Đã chọn thiết bị</string>

    <string name="message_lost_connect">Mất kết nối USB. Vui lòng thử lại</string>
    <string name="message_lost_connect_button">Về trang Cấu hình</string>
    <string name="app_version">Q-tech. Ver 1.0.170821</string>

</resources>